Fix #1677 "PDF: Misaligned required checkboxes/radio buttons"

--- a/src/resources/apps/fr/style/form-runner-orbeon.less
+++ b/src/resources/apps/fr/style/form-runner-orbeon.less
@@ -147,7 +147,6 @@ body.orbeon { background-color: @frBackground }
     }
 
     // Add a star before the label of required fields, but only in new/edit modes
-    // NOTE: This only works in span layout (the default in FR since 2011-07-28)
     // NOTE: Also cover Form Builder classes here instead of form-builder.css, so we don't miss changes done here
     .fr-mode-new, .fr-mode-edit, .fr-mode-test, .xforms-dialog {
         .xforms-required, .fb-required-true {           // also for Form Builder at edit time
@@ -402,7 +401,6 @@ body.orbeon { background-color: @frBackground }
         }
 
         a, button.btn-link { color: black; text-decoration: none }
-        .xforms-required label { background-image: none; padding-left: 0 }
 
         .container {
             width: 100%;
